[package]
name = "liongbot"
version = "0.1.0"
authors = ["PENGUINLIONG <admin@penguinliong.moe>"]
links = "CQP"
build = "build.rs"

[dependencies]
base64="0.9"
bytes="0.4"
encoding_rs="0.8"
serde="1.0"
serde_json="1.0"
diesel="1.3"
dotenv="0.13"
structopt="0.2"
failure="0.1"

[lib]
name="liongbot"
crate-type=["cdylib"]
